# DiffusionRL

./: CLAUDE.md  config.yaml  pyproject.toml  treediff_rl_improvements.md
.claude/: settings.json
scripts/: run_diff_rl.sh  train.py
src/diffusion/: __init__.py  utils.py
src/diffusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/diffusion/mcts/: __init__.py  node.py  tree_search.py
src/diffusion/models/: __init__.py  attention.py  denoiser.py  diffusion.py  verifier.py
src/diffusion/othello/: env.py
src/diffusion/rl/: __init__.py  replay_buffer.py  trainer.py
